--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Race Survival: Arena King</title>
+        <title>about:blank</title>
         <link rel="canonical" href="https://www.twoplayergames.org/game/race-survival-arena-king">
         <link href="/dist/gameframe-c11d10c8.css" rel="stylesheet">
 
