--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>about:blank</title>
-        <link rel="canonical" href="https://www.twoplayergames.org/game/race-survival-arena-king">
+        <link rel="canonical" href="race-survival.vercel.app">
         <link href="/dist/gameframe-c11d10c8.css" rel="stylesheet">
 
     <link rel="preconnect" href="//www.googletagservices.com" crossorigin>
