--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Survival Race</title>
+    <title>about:blank</title>
     <script>
 		if (window.self === window.top) {
 		    var gLoc = window.location.pathname;
 		    var gPath = gLoc.substring(0, gLoc.lastIndexOf('/'));
 		    var gName = gPath.substring(gPath.lastIndexOf("/") + 1);
-		    window.location.replace('../../../../' + gName + '-game/');
+		    window.location.replace('../../../../' + gName + '-game.html/');
 		}
 	</script>
     <style>
