--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>about:blank</title>
 <link rel="stylesheet" href="https://o1.gombis.com/lib/game-loader/gameloader2020.css" />
 <script src="https://o1.gombis.com/lib/game-loader/gameloader2022.js"></script>
 
